WIP - arcane system

--- a/gradle.properties
+++ b/gradle.properties
@@ -10,3 +10,6 @@ patchline=release
 org.gradle.java.installations.auto-detect=true
 org.gradle.java.installations.auto-download=true
 org.gradle.jvm.toolchain.install.enabled=true
+
+# Suppress Java 25 native access warnings for Gradle
+org.gradle.jvmargs=--enable-native-access=ALL-UNNAMED
