Rename Mods and add [WIP] Level System Mod

--- a/seyon-arcane-arts/build.gradle
+++ b/seyon-arcane-arts/build.gradle
@@ -1,4 +1,4 @@
-// Project-specific configuration for SeyonMagic
+// Project-specific configuration for SeyonArcaneArts
 version = '1.0.0'
 
 dependencies {
