--- a/seyon-arcane-arts/src/main/resources/manifest.json
+++ b/seyon-arcane-arts/src/main/resources/manifest.json
@@ -1,7 +1,7 @@
 {
   "Group": "Seyon",
-  "Name": "SeyonMagic",
-  "Version": "0.0.1",
+  "Name": "SeyonArcaneArts",
+  "Version": "1.0.0",
   "Description": "Arcane Arts - A comprehensive magic system for Hytale with wands, grimoires, spells and modifiers",
   "Authors": [
     {
@@ -9,7 +9,7 @@
     }
   ],
   "Website": "https://seyon.de",
-  "Repository": "https://github.com/seyon/hytale-mods/seyon-magic",
+  "Repository": "https://github.com/seyon/hytale-mods/seyon-arcane-arts",
   "ServerVersion": "*",
   "Dependencies": {},
   "OptionalDependencies": {},
