--- a/settings.gradle
+++ b/settings.gradle
@@ -1,5 +1,7 @@
 rootProject.name = 'hytale-mods'
 
 // Include all sub-projects
+include 'seyon-utils'
 include 'seyon-motd'
-include 'seyon-magic'
+include 'seyon-arcane-arts'
+include 'seyon-level-system'
