WIP try to solve CustomUI error

--- a/seyon-level-system/src/main/resources/manifest.json
+++ b/seyon-level-system/src/main/resources/manifest.json
@@ -17,5 +17,5 @@
   },
   "DisabledByDefault": false,
   "Main": "dev.seyon.leveling.SeyonLevelSystemPlugin",
-  "IncludesAssetPack": false
+  "IncludesAssetPack": true
 }
