--- a/settings.gradle
+++ b/settings.gradle
@@ -1,7 +1,7 @@
 rootProject.name = 'hytale-mods'
 
 // Include all sub-projects
-include 'seyon-utils'
+include 'seyon-core'
 include 'seyon-motd'
 include 'seyon-arcane-arts'
 include 'seyon-level-system'
