--- a/seyon-level-system/src/main/resources/manifest.json
+++ b/seyon-level-system/src/main/resources/manifest.json
@@ -11,7 +11,9 @@
   "Website": "https://seyon.de",
   "ServerVersion": "*",
   "Dependencies": {},
-  "OptionalDependencies": {},
+  "OptionalDependencies": {
+    "EllieAU:HyUI": "*"
+  },
   "DisabledByDefault": false,
   "IncludesAssetPack": true,
   "Main": "dev.seyon.leveling.SeyonLevelSystemPlugin"
