--- a/seyon-core/build.gradle
+++ b/seyon-core/build.gradle
@@ -7,13 +7,24 @@ version = '1.0.0'
 
 java {
     toolchain {
-        languageVersion = JavaLanguageVersion.of(21)
+        languageVersion = JavaLanguageVersion.of(25)
+    }
+}
+
+repositories {
+    mavenCentral()
+    maven {
+        name = "hytale-release"
+        url = uri("https://maven.hytale.com/release")
+    }
+    maven {
+        name = "hytale-pre-release"
+        url = uri("https://maven.hytale.com/pre-release")
     }
 }
 
 dependencies {
-    // Hytale API - using local jar like other mods
-    compileOnly files('../dependency/HytaleServer.jar')
+    compileOnly("com.hypixel.hytale:Server:2026.01.24-6e2d4fc36")
 }
 
 // Process resources to replace ${version} in manifest.json
